# InterFaceProt

./: pyproject.toml
Interface/: Dockerfile  db.sqlite3  docker-compose-backup.yml  docker-compose.yml  manage.py  requirements.txt
Interface/InterfaceApp/: admin.py  apps.py  models.py  urls.py  views.py
Interface/InterfaceApp/migrations/: 0001_initial.py
Interface/InterfaceApp/templates/: base.html  constructor.html  login.html  worker.html
Interface/InterfaceProject/: asgi.py  settings.py  urls.py  wsgi.py
