[tool.poetry]
name = "interfacetest-master"
version = "0.0.1"
description = "Интерфейс прототип"
authors = ["Sermob112 <motherboard879@gmail.com>"]
readme = "README.md"
packages = [{include = "interfacetest_master"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
chartjs = "^1.2"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
